Fix bug #25916: get_browser() -> PHP Fatal error: Nesting level too deep - recursive dependency?